--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-        <title>ADMINISTRATOR PPDB | Login</title>
+        <title>ADMINISTRATOR PPDB | LOGIN</title>
 
     </head>
 
@@ -21,7 +21,7 @@
                     <div class="card border-0 shadow rounded-3 my-5">
                         <div class="card-body p-4 p-sm-5">
                             <div class="text-center mb-5">
-                                <img src="img/logoLoginHifal.png" width="30%" alt="">
+                                <img src="img/hifal.png" width="30%" alt="">
                             </div>
                             <form>
                                 <div class="form-floating mb-3">
