--- a/form/input1.html
+++ b/form/input1.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>FORM RPS</title>
+    <title>FORM PPDB</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -29,37 +29,187 @@
                 <div class="row mb-5">
                   <div class="container py-3">
                     <div class="row align-items-center mb-3">
-                      <div class="col-lg-5 px-5 mx-auto order-2 order-lg-2"><img src="../img/UMPPcilik.png" alt=""
+                      <div class="col-lg-5 px-5 mx-auto order-2 order-lg-2"><img src="../img/hifal.png" alt=""
                         class="img-fluid mb-4 mb-lg-0"></div>
                         <div class="col-lg-7 order-2 order-lg-2"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-                          <h4>RENCANA PEMBELAJARAN SEMESTER (RPS)</h4>
-                          <h5>Universitas Muhammadiyah Pekajangan Pekalongan</h5>
+                          <h4>PENERIMAAN PESERTA DIDIK BARU</h4>
+                          <h5>MTs Salafiyah Hidayatul Athfal Pekalongan</h5>
                         </div>
                       </div>
                     </div>
 
 
+
+                    <h4 class="titlees text-center">BIODATA</h4>
+                    <hr>
                     <div class="col-md-6 mb-3">
-                      <label for="nama_prodi" class="form-label">Nama Program Studi</label>
-                      <select id="nama_prodi" name="nama_prodi" class="form-select">
-                        <option selected>Choose...</option>
-                        <option>One</option>
-                        <option>Two</option>
-                        <option>Three</option>
-                      </select>
+                        <label for="kode_makul" class="form-label">Nomor Pendaftaran</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Nomor Pendaftaran Otomatis Terisi" disabled>
                     </div>
+
                     <div class="col-md-6 mb-3">
-                      <label for="nama_makul" class="form-label">Nama Mata Kuliah</label>
+                        <label for="nomor_pendaftaran" class="form-label">NISN</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nomor_pendaftaran" placeholder="Masukkan Nomor Induk Siswa Nasional">
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                        <label for="nama" class="form-label">Nama Lengkap</label>
+                        <input type="text" class="form-control" id="nama" name="nama" placeholder="Masukkan Nama Lengkap">
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                        <label for="nama" class="form-label">Tempat Lahir</label>
+                        <input type="text" class="form-control" id="nama" name="nama" placeholder="Masukkan Nama Lengkap">
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                        <label for="nama" class="form-label">Tanggal Lahir</label>
+                        <input type="date" class="form-control" id="nama" name="nama" placeholder="Masukkan Nama Lengkap">
+                    </div>
+
+                    <div class="col-md-6 mb-3">
+                        <label for="semester" class="form-label">Jenis Kelamin</label>
+                        
+                        <div class="input-group">
+                          <select id="semester_gasnap" name="semester_gasnap" class="form-select">
+                            <option selected disabled>Pilih</option>
+                            <option>Laki-laki</option>
+                            <option>Perempuan</option>
+                          </select> 
+                        </div>
+                      </div>
+
+                      <div class="col-md-3 mb-3">
+                        <label for="semester" class="form-label">Anak Ke-</label>
+                        <div class="input-group">
+                            <input class="form-control" list="datalistTahun" id="semester_th" name="semester_th" placeholder="Anak Ke-">
+                            <datalist id="datalistTahun">
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
+                              <option value="6"></option>
+                              <option value="7"></option>
+                              <option value="8"></option>
+                              <option value="9"></option>
+                              <option value="10"></option>
+                              <option value="11"></option>
+                              <option value="12"></option>
+                              <option value="13"></option>
+                              <option value="14"></option>
+                              <option value="15"></option>
+                              <option value="16"></option>
+                              <option value="17"></option>
+                              <option value="18"></option>
+                              <option value="19"></option>
+                              <option value="20"></option>
+                            </datalist>
+                        </div>
+                      </div>
+
+                      <div class="col-md-3 mb-5">
+                        <label for="semester" class="form-label">Jumlah Saudara</label>
+                        <div class="input-group">
+                            <input class="form-control" list="saudara" id="semester_th" name="semester_th" placeholder="Anak Ke-">
+                            <datalist id="saudara">
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
+                              <option value="6"></option>
+                              <option value="7"></option>
+                              <option value="8"></option>
+                              <option value="9"></option>
+                              <option value="10"></option>
+                              <option value="11"></option>
+                              <option value="12"></option>
+                              <option value="13"></option>
+                              <option value="14"></option>
+                              <option value="15"></option>
+                              <option value="16"></option>
+                              <option value="17"></option>
+                              <option value="18"></option>
+                              <option value="19"></option>
+                              <option value="20"></option>
+                            </datalist>
+                        </div>
+                      </div>
+
+
+
+                      <h4 class="titlees text-center">ALAMAT</h4>
+                      <hr>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="nama_dosen" class="form-label">Desa</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Type Your Name...">
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="nama_dosen" class="form-label">Kecamatan</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Type Your Name...">
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="nama_dosen" class="form-label">Kabupaten</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Type Your Name...">
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="nama_dosen" class="form-label">Provinsi</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Type Your Name...">
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="nama_dosen" class="form-label">Kode Pos</label>
+                        <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Type Your Name...">
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="sifat" class="form-label">Tinggal Bersama</label> <div class="mb-2"></div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="sifat" id="sifat" value="teori">
+                          <?php if (isset($sifat) && $sifat=="teori") echo "checked";?>
+                          <label class="form-check-label" for="sifat">Orang Tua</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="sifat" id="sifat2" value="seminar">
+                          <?php if (isset($sifat) && $sifat=="seminar") echo "checked";?>
+                          <label class="form-check-label" for="sifat">Saudara</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="sifat" id="sifat3" value="praktikum">
+                          <?php if (isset($sifat) && $sifat=="praktikum") echo "checked";?>
+                          <label class="form-check-label" for="sifat">Kos</label>
+                        </div>
+                      </div>
+
+                      <div class="col-md-6 mb-3">
+                        <label for="sifat" class="form-label">Yang Membiayai Sekolah</label> <div class="mb-2"></div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="sifat" id="sifat" value="teori">
+                          <?php if (isset($sifat) && $sifat=="teori") echo "checked";?>
+                          <label class="form-check-label" for="sifat">Orang Tua</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="sifat" id="sifat2" value="seminar">
+                          <?php if (isset($sifat) && $sifat=="seminar") echo "checked";?>
+                          <label class="form-check-label" for="sifat">Saudara</label>
+                        </div>
+                      </div>
+
+
+
+                    <div class="col-md-6 mb-3">
+                      <label for="nama_makul" class="form-label">Tanggal Lahir</label>
                       <select id="nama_makul" name="nama_makul" class="form-select">
                         <option selected>Choose...</option>
                         <option>One</option>
                         <option>Two</option>
                         <option>Three</option>
                       </select>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                      <label for="kode_makul" class="form-label">Kode Mata Kuliah </label>
-                      <input type="text" class="form-control" id="nama_dosen" name="nama_dosen" placeholder="Choose Makul, Kode Auto Fill..." disabled>
                     </div>
                     <div class="col-md-6 mb-3">
                       <label for="sifat" class="form-label">Sifat</label> <div class="mb-2"></div>
